# qi-v2-dp-actor

./: .gitignore  CLAUDE.md  DEPENDENCY_MANAGEMENT.md  README.md
docs/: impl.dsl.advanced.md
docs/data-manager/: analytics.contracts.md
docs/dsl/: guide.md  qi.dp.dsl.contracts.md  qi.v4.dsl.contracts.md
docs/llm/: claude.code.ollama.md  dataset-setup.md  finetuning.md  finetuning.qicore.md
docs/misc/vpn/: astrill.md
haskell/: cabal.project  qi-dp-actor.cabal
typescript/: .gitignore  CLAUDE.md  IMPLEMENTATION_GUIDE.md  README.md  TODO-IMPLEMENTATION-PLAN.md  TODO-MCP-IMPLEMENTATION.md  VERSION.md  biome.json  eslint.config.js  package.json  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
typescript/.claude/commands/: update-knowledge.md  verify-dsl-doc.md  verify-dsl-impl.md  verify-md-impl.md  verify-qicore-usage.md  verify-utils-md.md
typescript/app/streaming/: Makefile  README.md  admin.ts  consumer.ts  docker-compose.yml  package.json  producer.ts
typescript/docs/: README.md  precision.md  standards.md  testing-strategy.md
typescript/docs/actor/: guide.md  impl.guide.md  impl.plan.md
typescript/docs/architecture/: concrete-actors-design.md  modules.md
typescript/docs/base/streaming/: README.md  design-decisions.md
typescript/docs/claude-code/: context.md  memory.md
typescript/docs/data-manager/: analytics.md
typescript/docs/dsl/: qi.dp.dsl.md
typescript/docs/impl/: context-continuation-protocol.md  qi-base-usage.md  qi-core-usage.md
typescript/docs/knowledge/: README.md
typescript/docs/knowledge/project/: README.md  troubleshooting.md
typescript/docs/knowledge/qi-stack/: README.md
typescript/docs/md/: impl.marketdata.md
typescript/docs/qicore/tutorial/: 03-integration-examples.md  04-advanced-patterns.md  README.md
typescript/docs/qicore/usage/: context-continuation-protocol.md  qi-advanced-patterns.md
typescript/docs/reports/: base-layer-verification.md  critical-issues-analysis-2025-07-22.md  critical-issues-fix-progress-2025-07-22.md  dsl-documentation-consistency-final.md  dsl-documentation-consistency.md  fix-architecture-type-leakage-2025-07-22.md  fix-dsl-interfaces-2025-07-22.md  fix-logger-api-2025-07-22.md  fix-logger-context-duplication-2025-07-22.md  fix-type-safety-2025-07-22.md  impl-actor-verification.1.md  impl.verification.1.md  impl.verification.2.md  impl.verification.md  implementation-verification-report.md  qicore-usage-verification.md  result-composition-fix-2025-07-23.md
typescript/docs/reports/dsl/: compliance.md  implementation-compliance.md  implementation.md  namespace-compliance.md
typescript/docs/utils/md/: analytics.md  precision.md
typescript/docs/zz/: refactor.mcp.md
typescript/lib/actor/: package.json
typescript/lib/actor/src/: index.ts
typescript/lib/actors/: package.json
typescript/lib/actors/src/: MCPMarketDataWriter.ts  MCPStreamingWriter.ts  index.ts  (+1 more)
typescript/lib/base/: biome.json  package.json  tsconfig.json
typescript/lib/connectors/: package.json  tsup.config.ts
typescript/lib/dsl/: package.json  tsconfig.tsbuildinfo
typescript/lib/generic/: package.json  tsup.config.ts
typescript/lib/mcp/: package.json
typescript/lib/md/: package.json  tsconfig.json
typescript/lib/src/: index.ts
typescript/lib/tests/: index.test.ts
typescript/lib/utils/: package.json  vitest.config.ts
typescript/tests/config/: loader.ts  redpanda.ci.json  redpanda.local.json  redpanda.schema.json  redpanda.ts  redpanda.yaml
(+179 files in other folders)
